src/objects/MCAR_Manufacturer_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Status__c</fullName>
        <formula>MCAR_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCAR User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCAR User Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Nokia MCAR External Supplier,Nokia MCAR EMS 2.0 User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer Name</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>Manufacturer Contacts</relationshipLabel>
        <relationshipName>Manufacturer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCAR Manufacturer Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Manufacturer_Name__c</field>
                <operation>equals</operation>
                <valueField>MCAR_Manufacturer_Site__c.Manufacturer_Name__c</valueField>
            </filterItems>
            <infoMessage>Please Select A Manufacturer Site</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MCAR_Manufacturer_Site__c</referenceTo>
        <relationshipLabel>Manufacturer Contacts</relationshipLabel>
        <relationshipName>Manufacturer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Manufacturer Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturer Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
    </sharingReasons>
</CustomObject>